--- a/README
+++ b/README
@@ -1,1 +1,3 @@
 test file
+I am new to Github and trying to figure out how to use it!
+saved changes are called commits.  the commit message can be used to describe the change history
